# pigvlm_gui

./: .gitattributes  .gitignore  CLAUDE.md  REQUIREMENTS.md  must_know.md  short_video_extraction.ipynb  sleap_to_dlc.ipynb  sleap_to_dlc.py  sleap_to_dlc_multi.ipynb  sleap_to_dlc_multi.py  test.slp  test_multi.slp
docs/: PROGRESS.md  TASKS.md
workspace/sleap/: .gitignore  README.md  mkdocs.yml  pyproject.toml
workspace/sleap/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
workspace/sleap/.github/workflows/: build.yml
workspace/sleap/docs/: contribute.md  help.md  index.md  installation.md  overview.md
workspace/sleap/docs/assets/stylesheets/: extra.css
workspace/sleap/docs/guides/: creating-a-custom-training-profile.md  guides-overview.md  instance-size-distribution.md  label-quality-control.md  migrating-to-sleap-1-5.md  run-training-and-inference-on-colab.md  running-sleap-remotely.md  tracking-and-proofreading.md
workspace/sleap/docs/learnings/: gui.md  index.md  main-mistakes-by-tracking.md  prediction-assisted-labeling.md  skeleton-design.md  system-overview.md
workspace/sleap/docs/notebooks/: Analysis_examples.ipynb  Data_structures.ipynb  Interactive_and_resumable_training.ipynb  Model_evaluation.ipynb  Post_inference_tracking.ipynb  Training_and_inference_on_an_example_dataset.ipynb  Training_and_inference_using_Google_Drive.ipynb  notebooks-overview.md
workspace/sleap/docs/reference/: command-line-interfaces.md  datasets.md
workspace/sleap/docs/tutorial/: correcting-predictions.md  exporting-the-results.md  i-m-done-sleaping-now-what.md  importing-data.md  initial-labeling.md  overview.md  proofreading.md  setup.md  tracking-new-data.md  training-a-model.md
workspace/sleap/sleap/: cli.py  legacy_cli_adaptors.py  nn_cli.py  prefs.py  system_info.py  util.py  version.py
workspace/sleap/sleap/config/: shortcuts.yaml  training_editor_form.yaml
workspace/sleap/sleap/gui/: app.py  commands.py  config_utils.py  dataviews.py  shortcuts.py  web.py
workspace/sleap/sleap/gui/dialogs/: delete.py  dlc_shortcuts_reference.py  formbuilder.py  size_distribution.py
workspace/sleap/sleap/gui/learning/: configs.py  dialog.py  main_tab.py  receptivefield.py  runners.py  size.py  unet_utils.py  wandb_utils.py
workspace/sleap/sleap/gui/widgets/: docks.py  frame_target_selector.py  size_distribution.py  video.py
workspace/sleap/sleap/io/: convert.py
workspace/sleap/sleap/io/format/: csv.py  dlc_csv.py  sleap_analysis.py
workspace/sleap/sleap/sleap_io_adaptors/: lf_labels_utils.py
workspace/sleap/sleap/training_profiles/: baseline.centroid.yaml  baseline.multi_class_bottomup.yaml  baseline.multi_class_topdown.yaml  baseline_large_rf.bottomup.yaml  baseline_large_rf.single.yaml  baseline_large_rf.topdown.yaml  baseline_medium_rf.bottomup.yaml  baseline_medium_rf.single.yaml  baseline_medium_rf.topdown.yaml
workspace/sleap/tests/: test_cli.py  test_predictions_to_instances.py  test_system_info.py
workspace/sleap/tests/data/models/minimal_instance.UNet.centered_instance_with_scaling/: initial_config.json
workspace/sleap/tests/fixtures/: datasets.py
workspace/sleap/tests/gui/: test_app.py  test_commands.py  test_merge.py  test_missingfiles_sequences.py  test_update_checker.py  test_video_player.py  test_web.py
workspace/sleap/tests/gui/learning/: __init__.py  test_cli_construction.py  test_config_bindings.py  test_edge_cases.py  test_integration.py  test_learning_dialog.py  test_main_tab.py  test_size.py
workspace/sleap/tests/gui/widgets/: test_frame_target_selector.py  test_qc.py  test_size_distribution.py
workspace/sleap/tests/qc/: __init__.py  test_config.py  test_detector.py  test_features.py  test_frame_level.py  test_gmm.py  test_results.py
workspace/sleap/tests/sleap_io_adaptors/: test_lf_labels_utils.py
